# ErosionFront

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: pypi-publish.yml  python-publish.yml
notebooks/analysis/: 3DProfiling.ipynb
notebooks/simulation/: defaults.json  reference.json  testing.json
notebooks/simulation/combo/: README_pdfs.txt
notebooks/simulation/testing/: metadata.json
search/: search_index.json
src/erosionfront/: __init__.py  initialize.py
src/erosionfront/geomorphic/: gma.py  model.py  substrate.py  surface.py
src/erosionfront/levelset/: base.py  data.py  domain.py  elementary.py  export.py  gradient.py  grid.py  shock.py  solver.py  speed.py
src/erosionfront/misc/: save.py  utils.py
src/erosionfront/theory/: arrays.py  equations.py  numerical.py  symbols.py
src/erosionfront/topo/: analysis.py
src/erosionfront/visualization/: base.py  gmaviz.py  simviz.py  speedviz.py  theoryviz.py  topoviz.py  viz2d.py
web/: mkdocs.yml
web/docs/: index.md
web/site/: index.html
web/site/search/: search_index.json
