[project]
name = "erosionfront"
version = "0.1.1"
description = "Tools for simulating rock slope erosion and the emergent geometry of Richter slopes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy", "matplotlib", "scipy", "shapely", "rasterio", "ruptures", "h5py"
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true